# XEFR4Py

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
data/: allDataArceneTrain.txt
docs/: requirements.txt
docs/source/: block_diagram.rst  block_diagram_implementation.rst  conf.py  discretizer.rst  implementations.rst  index.rst  knowledge_viewer.rst  metrics.rst  pages.rst  table.rst
src/: Utils.py
src/eefr/: __init__.py
src/eefr/discretizer/: MDL.py  __init__.py
src/eefr/knowledge_viewer/: PandasModel.py  PandasTableView.py  __init__.py
src/eefr/knowledge_viewer/BlockDiagram/: Arrow.py  BlockDiagramScene.py  BlockDiagramView.py  ButtonClassBlock.py  ClassBlock.py  __init__.py
src/eefr/knowledge_viewer/BlockDiagram/Implementation/: EnsembleFeatureRankingBlockDiagramScene.py  MainBlockDiagramScene.py
src/eefr/knowledge_viewer/Page/: BasePage.py  BasePageWithBlockDiagram.py  ChildPage.py  ChildPageWithBlockDiagram.py  __init__.py
src/eefr/knowledge_viewer/Page/BlockDiagram/: Arrow.py  BlockDiagramScene.py  BlockDiagramView.py  ButtonClassBlock.py  __init__.py
src/eefr/knowledge_viewer/Page/implementations/: CalculateRankSamplingPage.py  CalculateWeightsSamplingPage.py  ConstructorPage.py  DiscretizerPage.py  (+5 more)
src/eefr/knowledge_viewer/pages/: BasePage.py  BasePageWithBlockDiagram.py  ChildPage.py  ChildPageWithBlockDiagram.py  __init__.py
src/eefr/metrics/: ChiSquared.py  InformationGain.py  RandomForestImportance.py  __init__.py
src/xefr4py/: Utils.py  __init__.py
src/xefr4py/discretizer/: MDL.py  __init__.py
src/xefr4py/knowledge_viewer/: __init__.py
src/xefr4py/knowledge_viewer/pages/: BasePageWithBlockDiagram.py  ChildPage.py  ChildPageWithBlockDiagram.py  __init__.py
src/xefr4py/metrics/: ChiSquared.py  InformationGain.py  RandomForestImportance.py  __init__.py
tests/unit/: TestEEFR.py
tests/unit/Metrics/: TestChiSquared.py  TestDiscretizer.py  TestInformationGain.py  TestRandomForestImportance.py
(+43 files in other folders)
