[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "XEFR"
version = "0.0.1"
authors = [
	{ name="Matilde Pós-de-Mina Pato", email="matilde.pato@isel.pt"},
    { name="Diogo Amorim", email="a47248@alunos.isel.pt"},
]
description = "A package for big data"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/matpato/XEFR4Py"